[gd_scene load_steps=28 format=2]

[ext_resource path="res://Character/Bee/Texture/Bee.png" type="Texture" id=1]
[ext_resource path="res://Assate/shader/damage_takken_flash.shader" type="Shader" id=2]
[ext_resource path="res://Character/Bee/Bee.gd" type="Script" id=3]
[ext_resource path="res://Object/Component/HitBox/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Object/Component/HealtBar/HealthBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assate/Effect/InExplostion_1.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "attacking"

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "flying"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "spawning"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "taking_damage"

[sub_resource type="AnimationNodeStateMachineTransition" id=6]

[sub_resource type="AnimationNodeStateMachineTransition" id=7]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=8]

[sub_resource type="AnimationNodeStateMachineTransition" id=9]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=10]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=13]
states/attacking/node = SubResource( 2 )
states/attacking/position = Vector2( 84, 91 )
states/flying/node = SubResource( 3 )
states/flying/position = Vector2( 248, 91 )
states/spawning/node = SubResource( 4 )
states/spawning/position = Vector2( 248.778, -13 )
states/taking_damage/node = SubResource( 5 )
states/taking_damage/position = Vector2( 248, 237 )
transitions = [ "attacking", "taking_damage", SubResource( 6 ), "attacking", "flying", SubResource( 7 ), "flying", "attacking", SubResource( 8 ), "taking_damage", "attacking", SubResource( 9 ), "taking_damage", "flying", SubResource( 10 ), "flying", "taking_damage", SubResource( 11 ), "spawning", "flying", SubResource( 12 ) ]
start_node = "spawning"
graph_offset = Vector2( -111.012, -69 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=14]

[sub_resource type="Animation" id=15]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.35, 0.4 ),
"transitions": PoolRealArray( 0.5, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.7, 1.7 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot_projectile"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:material:shader_param/flash_modifire")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_can_take_damage"
}, {
"args": [ true ],
"method": "set_can_take_damage"
} ]
}

[sub_resource type="Animation" id=16]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/flash_modifire")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "detect_target"
}, {
"args": [  ],
"method": "detect_target"
}, {
"args": [  ],
"method": "detect_target"
}, {
"args": [  ],
"method": "detect_target"
}, {
"args": [  ],
"method": "detect_target"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_can_take_damage"
}, {
"args": [ true ],
"method": "set_can_take_damage"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "detect_sibling"
}, {
"args": [  ],
"method": "detect_sibling"
}, {
"args": [  ],
"method": "detect_sibling"
}, {
"args": [  ],
"method": "detect_sibling"
}, {
"args": [  ],
"method": "detect_sibling"
} ]
}

[sub_resource type="Animation" id=17]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("SpawningSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HealthBar:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpawningSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_can_take_damage"
}, {
"args": [ false ],
"method": "set_can_take_damage"
} ]
}

[sub_resource type="Animation" id=18]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/flash_modifire")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_can_take_damage"
} ]
}

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 8, 9 )

[sub_resource type="ShaderMaterial" id=20]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/wave_speed = Vector2( 0, 0 )
shader_param/wave_length = Vector2( 0, 0 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifire = 0.0

[sub_resource type="CircleShape2D" id=21]
radius = 10.0499

[node name="Bee" type="KinematicBody2D" groups=[
"Bee",
]]
collision_layer = 512
script = ExtResource( 3 )
life = 15.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 13 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attacking = SubResource( 15 )
anims/flying = SubResource( 16 )
anims/spawning = SubResource( 17 )
anims/taking_damage = SubResource( 18 )

[node name="HitBox" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, 2 )
collision_layer = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 19 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="HealthBar" parent="." instance=ExtResource( 5 )]
margin_left = -4.0
margin_top = -7.0
margin_right = 11.0
margin_bottom = -2.0
rect_scale = Vector2( 0.462324, 0.407332 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 20 )
position = Vector2( -0.5, 0 )
texture = ExtResource( 1 )
hframes = 2

[node name="SpawningSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 6 )
hframes = 3
vframes = 3
frame = 8

[node name="SiblingDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="SiblingDetector"]
shape = SubResource( 21 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="SiblingDetector" to="." method="_on_another_bee_detected"]
[connection signal="body_exited" from="SiblingDetector" to="." method="_on_sibling_exited_area"]
